# MNIST-Accel

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  AXI_IMPLEMENTATION_SUMMARY.md  AXI_MIGRATION_GUIDE.md  CMakeLists.txt  DATA_PATH_TRAINING_TO_MAC.md  FILE_DEPENDENCY_CHART.md  LICENSE  Makefile.verilator  README.md  README_OLD.md  STRUCTURE.md  TODO.md  firmware.hex  requirements.txt  run_e2e_inference.sh  test_pe
.github/workflows/: ci.yml
OPENROADMARCUS/: README_MARCUS.md  config.tcl  run_openlane.sh  run_resynth.sh  run_sta_after_synth.sh  soc_top_v2_single_domain.upf  sta_all_falsepaths.tcl  sta_clean.tcl  sta_fixed.tcl  sta_native.tcl  sta_prects.tcl  sta_wns_only.tcl  sta_worst_path.tcl  strip_sim.py  synth_native.ys
OPENROADMARCUS/constraints/: soc_top_v2.pin_order.cfg  soc_top_v2.sdc
OPENROADMARCUS/macros/: sram_1rw_wrapper.lef  sram_1rw_wrapper.lib  sram_1rw_wrapper_bb.v
accel/: test_compile
accel v1/docs/: ARCHITECTURE.md  ERROR_FIXES_SUMMARY.md  FINAL_FIX_SUMMARY.md  FPGA_DEPLOYMENT.md  HOST_RS_TILER.md  PROJECT_COMPLETION_SUMMARY.md  QUANTIZATION.md  QUANTIZATION_PRACTICAL.md  VERIFICATION.md
accel/logs/: misclassified.txt  train_fp32.txt
accel/scripts/: run_tests.sh
accel/tests/: Makefile
archive/: pynq_z2.xdc
archive/old_project_done/: MANIFEST.txt  README.md
data/: e2e_accuracy_sweep.json  e2e_results.json  golden_reference.json  golden_reference_multitile.json
data/bsr_export_14x14/: model_summary.json
data/int8/: conv1_weight_int8.npy  conv1_weight_scales.npy  fc1_bias_int8.npy  fc1_weight_int8.npy
data/noc_traces/: carla_town05_junction_bev_frame.json  carla_town05_junction_bev_reduce.json  carla_town05_junction_scene.json  nuscenes_mini_bev_frame.json  nuscenes_mini_bev_reduce.json
docs/: BSR_14x14_VERIFICATION.md  DEEP_DIVE.md  NETWORKING_AND_OUTREACH_2026.md  NOC_PROJECT_DEFINITION.md  OPENLANE_HANDOFF.md  POWER_ARCHITECTURE.md  RTL_MEMORY_AND_CPP_GUIDE.md  SIGNAL_BREAKDOWN.md  TAPEOUT_READINESS_CHECKLIST.md  TAPEOUT_TARGET.md  architecture_spec.md  axi_arbiter_plain_english_pseudocode.txt  axi_crossbar_line_by_line.md  critical_path_timing.md  email_tahar.md  multi_tile_architecture.md  power_analysis.md  zynq_ports_guide.md
docs/analysis/: addr_interleaving_analysis.md  synthesis_area_report.md
docs/architecture/: ARCHITECTURE.md  HOST_RS_TILER.md  SPARSITY_FORMAT.md
docs/archive/: CORRECTED_DATA_PATH_AXI_DENSE_BSR_SPARSE.md  PROJECT_RESTRUCTURING_PLAN.md  README_old.md  VALIDATION_COMPLETE_DATA_PATH.md
docs/competition/: AUTONOMY_COMPETITION_DECK.md
docs/figs/: README.md  systolic_array_dataflow.md
docs/guides/: CARLA_REAL_CAPTURE_SETUP.md  COCOTB_TESTING_GUIDE.md  POWER_ANALYSIS.md  POWER_MEASUREMENT.md  POWER_OPTIMIZATION_ADVANCED.md  QUANTIZATION_PRACTICAL.md  RTL_REWRITE_STUDY_PLAN.md  SIMULATION_GUIDE.md  SIMULATION_TOOLS.md  SOC_TOP_V2_FPGA_BOARD_INTEGRATION_CHECKLIST.md
docs/notes/: sram_architecture_note.md
docs/paper/: design_report.md  fpga_runbook.md
docs/project/: PRODUCTIONIZATION_COMPLETE.md  PRODUCTIONIZATION_ROADMAP.md  PRODUCTION_FIXES_SUMMARY.md  RESUME_PREDICTION_SUMMER2026.md
docs/specs/: dram_microarch_spec.md  soc_microarch_spec_v0.1.md
docs/verification/: INR_RESULTS.md  TEST_RESULTS.md  VERIFICATION.md
fw/: Makefile  firmware_inference.hex  firmware_inference_full.hex  firmware_inference_multitile.hex  hal.h  hal_accel.h  hal_eth.c  hal_plic.c  hal_timer.c  inference_config.h  inference_config_full.h  inference_config_multitile.h  main_inference.c  main_inference_full.c  main_inference_multitile.c
handoff/soc_top_v2/: README.md
hw/: README.md  continue  strip_assert.py  vivado_zcu104.tcl  yosys_run_soc_top_v2.sh  yosys_synth.ys
hw/.yosys_prep/: act_buffer.sv  bsr_dma.sv  mac8.sv  pe.sv  (+4 more)
next_to_be_done/: README.md
scripts/: ci_verilator.sh  synthesize_vivado.tcl  test.sh
sw/: README.md  accuracy_sweep.py  calibrate_shift.py  fp32_bsr_test.py  verify_firmware_accum.py
sw/cpp/: CMakeLists.txt
sw/cpp/apps/: benchmark.cpp  run_mnist_inference.cpp
sw/cpp/include/compute/: bsr_encoder.hpp  golden_model.hpp  tiling.hpp
sw/cpp/include/driver/: accelerator.hpp  csr_interface.hpp  performance.hpp
sw/cpp/include/memory/: address_map.hpp  buffer_manager.hpp  dma_controller.hpp
sw/cpp/include/utils/: logging.hpp  npy_loader.hpp
sw/cpp/src/compute/: bsr_encoder.cpp  golden_model.cpp  tiling.cpp
sw/cpp/src/driver/: accelerator.cpp  csr_interface.cpp  performance.cpp
sw/cpp/src/memory/: dma_controller.cpp
sw/cpp/src/utils/: logging.cpp  npy_loader.cpp
sw/cpp/tests/: test_bsr_encoder.cpp  test_buffer_manager.cpp  test_dma.cpp  test_end_to_end.cpp  test_tiling.cpp
testbench/: CMakeLists.txt  Makefile
tools/: Makefile.verilator  _smoke_test_layers.py  allocator_area_results.json  allocator_comparison_results.json  asic_uart_block_demo.py  build.sh  carla_capture_visuals.py  convert_to_sv.sh  estimate_timing.py  export_carla_bev_trace.py  gen_dram_init.py  gen_dram_init_multitile.py  innet_reduce_results.json  noc_allocator_benchmark.py  noc_allocator_full_comparison.py  plot_dram_experiments.py  render_carla_scene_still.py  run_e2e.py  run_synthesis.sh  soc_top_v2_uart_host.py  stage_soc_top_v2_bringup.sh  synth_allocator_area.py  synthesize_vivado.tcl  timing_results.json
video_assets/: PRODUCTION_GUIDE.md  README.md  create_animation.py  generate_visuals.py  record_demos.sh
(+740 files in other folders)
